# rats

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs
src/core/: alternative.rs  applicative.rs  applicative_error.rs  apply.rs  bifunctor.rs  flatmap.rs  foldable.rs  functor.rs  mod.rs  monad.rs  monoid_k.rs  semigroup_k.rs  traverse.rs
src/kernel/: mod.rs  monoid.rs  semigroup.rs
