[package]
name = "rats"
version = "0.1.0"
authors = ["Pedro Jordão <pedrohjordao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
paste = "1.0.4"
float-cmp = "0.8.0"
