[package]
name = "rats"
version = "0.1.0"
authors = ["Pedro Jordão <pedrohjordao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
paste = "1.0.11"
float-cmp = "0.9.0"
